# polygrid

./: .gitignore  LICENSE  README.md  createnv.bat  main.py  pyproject.toml  requirements_conda.txt  requirements_pip.txt  uv_added_packs.txt
datasets/cometa/preprocessed/: foodtruck-data-after.csv  foodtruck-data-before.csv  foodtruck-data.pkl
datasets/kdis/preprocessed/: water-data-after.csv  water-data-before.csv  water-data.pkl
datasets/offlineval/: readme.txt
datasets/offlineval/healthcare/: healthcare_evaluation_rank.csv
datasets/offlineval/multiclass/: multiclass_evaluation_rank.csv
datasets/paderborn/original/: README.txt  iris_dense.txt  vowel_dense.txt  wine_dense.txt
datasets/paderborn/preprocessed/: iris@pb.pkl  vowel@pb.pkl  wine@pb.pkl
datasets/results/: readme.txt
datasets/results/multiclass/: multiclass_results.xlsx
datasets/userstudy/: os2_pt_BR.csv  os2_pt_BR_responses.csv  os2_summary_bootstrap.csv  readme.txt  userstudy_results.xlsx
prototype/code/: cli.py  competitors.py  customDefs.py  datasets.py  evaluation.py  layout.py  layoutman.py  logo.py  metrics.py  polygrid.py  vorder.py
prototype/configs/: evaluate_H01_C1.cfg  evaluate_H01_C4.cfg  readers_T01_C0.cfg
prototype/readers/: readampi.py  readelsi.py  readerDefs.py  readfoodtruck.py  readpaderborn.py  readwater.py  readwhoqol.py
prototype/scripts/: autotest.in  demo.in
