[project]
name = "polygrid"
version = "0.7.0"
description = "Polygrid CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bootstrapped>=0.0.2",
    "ffmpeg>=1.4",
    "matplotlib>=3.10.8",
    "palmerpenguins>=0.1.6",
    "primefac>=2.0.12",
    "psutil>=7.2.2",
    "pyreadstat>=1.3.3",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.8.0",
    "scikit-multilearn-ng>=0.0.8",
    "shapely>=2.1.2",
]
